--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,3 +25,9 @@ wireguard_ubuntu_update_cache: "true"
 wireguard_ubuntu_cache_valid_time: "3600"
 
 wireguard_binary: "/usr/bin/wg"
+
+
+refresh_wg_server: false
+provision_wg_server: False
+provision_wg_client: False
+add_wg_client: False
