--- a/tasks/configure_server_interface.yml
+++ b/tasks/configure_server_interface.yml
@@ -1,32 +1,23 @@
 ---
 - name: "Configure Interface (default to {{ wireguard_interface }})"
   block:
-    - name: Check if wireguard directory exists
-      stat:
-        path: "{{ wireguard_remote_directory }}"
-      register: wg_dir
-
-    - name: create wireguard directory if not exists
-      file:
-        path: "{{ wireguard_remote_directory }}"
-        state: directory
-        owner: "root"
-        group: "root"
-        mode: 0700
-      when:
-        wg_dir.stat.exists == False
-      register: created_wg_dir
+    - set_fact:
+        vault_key: "{{ wireguard_server_endpoint.split(':')[0]}}"
     - name: Fetch Wireguard Client Pub Keys
       hashivault_read:
-        secret: "{{ ansible_hostname }}"
+        secret: "{{ vault_key }}"
         mount_point: 'kv/wireguard-server'
-#        key: centauriAlpha
         version: 2
       register: wgrawsecret
+      delegate_to: localhost
+      become: false
+      become_user: "{{ local_ssh_user }}"
+
     - name: Cleanup data
       set_fact:
         wireguard_server_clients: "{{wgrawsecret.value}}"
         wireguard_server_private_key: "{{wgrawsecret.value.PrivateKey}}"
+        wireguard_ip_map: {"10.253.10.150/32":"192.168.3.0/24","10.253.10.151/32":"192.168.3.101/32","10.253.10.152/32":"192.168.3.102/32","10.253.10.100/32":"192.168.20.0/24"}
 
     - debug: msg="Known secrets are {{ wgrawsecret.value }}"
     - debug: msg="PrivateKey {{ wireguard_server_private_key }}"
@@ -43,8 +34,6 @@
         mode: 0600
       notify:
         - reconfigure wireguard
-      when:
-        wg_dir.stat.exists == True or created_wg_dir is defined
 
     - name: Check if reload-module-on-update is set
       stat:
@@ -67,4 +56,4 @@
         state: started
         enabled: yes
 
-  tags: wireguard_configure_client
+  tags: wireguard_configure_server
