Updates to capture additional VPN work
Still missing updates for local VPN from phone...

--- a/tasks/configure_server_interface.yml
+++ b/tasks/configure_server_interface.yml
@@ -9,7 +9,7 @@
         mount_point: 'kv/wireguard-server'
         version: 2
       register: wgrawsecret
-      delegate_to: localhost
+      delegate_to: localhostw
       become: false
       become_user: "{{ local_ssh_user }}"
 
